--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Clickable Video Card</title>
@@ -66,6 +66,10 @@
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
+			background-image: url('FlimcyFlixLogo.png');
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
         }
     </style>
     <script>
@@ -78,7 +82,7 @@
     <div class="video-card" onclick="openNewPage('https://flimcyv.github.io/FlimmyFlix/')"></div>
 
     <div>
-        <<h1 class="rainbow-text" style="font-size: 36px;">
+        <<h1 class="rainbow-text" style="font-size: 46px;">
             PRESS BUTTON ABOVE FOR MOVIE WEBSITE!
         </h1>
 
