--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>Clickable Video Card</title>
@@ -62,11 +62,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('Galaxy.png');
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-			background-image: url('FlimcyFlixLogo.png');
+            background-image: url('Galaxy.png', ('FlimcyFlixLogo.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
@@ -82,7 +78,7 @@
     <div class="video-card" onclick="openNewPage('https://flimcyv.github.io/FlimmyFlix/')"></div>
 
     <div>
-        <<h1 class="rainbow-text" style="font-size: 46px;">
+        <<h1 class="rainbow-text" style="font-size: 36px;">
             PRESS BUTTON ABOVE FOR MOVIE WEBSITE!
         </h1>
 
