--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('Galaxy.png'), 'FlimcyFlixLogo.png');
+            background-image: url('Galaxy.png'), ('FlimcyFlixLogo.png');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
