--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Clickable Video Card</title>
@@ -62,7 +62,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('FlimcyFlixLogo.png'), ('Galaxy.png');
+            background-image: url('FlimcyFlixLogo.png'); /* New background image */
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
@@ -78,10 +78,9 @@
     <div class="video-card" onclick="openNewPage('https://flimcyv.github.io/FlimmyFlix/')"></div>
 
     <div>
-        <<h1 class="rainbow-text" style="font-size: 46px;">
+        <h1 class="rainbow-text" style="font-size: 46px;">
             PRESS BUTTON ABOVE FOR MOVIE WEBSITE!
         </h1>
-
     </div>
 </body>
 </html>
