--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
         }
 
         .video-card {
-            cursor: pointer;
-            width: 800px; /* Adjust the width */
-            height: 600px; /* Adjust the height */
-            border: 1px solid #ccc;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-image: url('FlimcyFlixLogo.png'); /* New background image */
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
+    cursor: pointer;
+    width: 800px; /* Adjust the width */
+    height: 600px; /* Adjust the height */
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('FlimcyFlixLogo.png');
+    background-size: cover; /* Change to cover */
+    background-position: center;
+    background-repeat: no-repeat;
+}
         }
     </style>
     <script>
